--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT = 8080
 SECRET_KEY = 12asfva87avwerf2afvkudfsnvbebbfnove3r3423
+DB_URL = "mongodb+srv://User02:Password0123@cluster0.k8phx.mongodb.net/BookingApp?retryWrites=true&w=majority&appName=Cluster0"
